<resources>
    <string name="app_name">UniFIND</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="welcome_string">Наша платформа поможет вам в выборе университета</string>
    <string name="Begin_string">Начать</string>
    <string name="welcome">Добро пожаловать, Динмухаммед</string>
    <string name="code">Код:</string>
    <string name="_302">302</string>
    <string name="sub_info">Прочее: Общежитие, футбольное поле, фитнес</string>
    <string name="sdu">Сулейман Демирель Университет</string>
    <string name="Universities">Университеты:</string>
    <string name="Specialisation">Специальность:</string>
    <string name="rabiya_iolji">Rabiya Iolji</string>
    <string name="_50">50%</string>
    <string name="autonomy">Автономия</string>
    <string name="just_question">Строить свою карьеру в пределах конкретной научной или технической сферы.</string>
    <string name="ready">Готово</string>


    <string-array name="subject1">
        <item>Математика</item>
        <item>Биология</item>
        <item>Всемирная история</item>
        <item>Творческий экзамен</item>
        <item>Казахский /Русский язык</item>
        <item>Иностранный язык</item>
        <item>География</item>
        <item>Казахский язык</item>
        <item>Химия</item>
        <item>Русский язык</item>
        <item>Казахский/</item>
    </string-array>
    <string-array name="subject1_KZ">
        <item>Математика</item>
        <item>Биология</item>
        <item>Әлемдік тарих</item>
        <item>Шығармашылық емтихан</item>
        <item>Қазақ / орыс тілі</item>
        <item>Шетел тілі</item>
        <item>География</item>
        <item>Қазақ тілі</item>
        <item>Химия</item>
        <item>Орыс тілі</item>
        <item>Қазақ /</item>
    </string-array>
    <string-array name="subject1_ENG">
        <item>Maths</item>
        <item>Biology</item>
        <item>The World History</item>
        <item>Creative exam</item>
        <item>Kazakh / Russian language</item>
        <item>Foreign language</item>
        <item>Geography</item>
        <item>Kazakh language</item>
        <item>Chemistry</item>
        <item>Russian language</item>
        <item>Kazakh/</item>
    </string-array>


    <string-array name="subject2">
        <item>Физика</item>
        <item>Химия</item>
        <item>География</item>
        <item>Творческий экзамен</item>
        <item>Казахская /Русская литература</item>
        <item>Всемирная история</item>
        <item>Математика</item>
        <item>Человек Общество Право</item>
        <item>Казахская литература</item>
        <item>Иностранный язык</item>
        <item>Русская литература</item>
        <item>Русский язык</item>
        <item>Биология</item>
    </string-array>

    <string-array name="subject2_KZ">
        <item>Физика</item>
        <item>Химия</item>
        <item>География</item>
        <item>Шығармашылық емтихан</item>
        <item>Қазақ / орыс әдебиеті</item>
        <item>Әлемдік тарих</item>
        <item>Математика</item>
        <item>Еркек Қоғам Дұрыс</item>
        <item>Қазақ әдебиеті</item>
        <item>Дүниежүзілік тарих</item>
        <item>Шетел тілі</item>
        <item>орыс әдебиеті</item>
        <item>Орыс тілі</item>
        <item>Биология</item>
    </string-array>
    <string-array name="subject2_ENG">
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Geography</item>
        <item>Creative exam</item>
        <item>Kazakh / Russian literature</item>
        <item>The World History</item>
        <item>Maths</item>
        <item>Man Society Right</item>
        <item>Kazakh literature</item>
        <item>Foreign language</item>
        <item>Russian literature</item>
        <item>Russian language</item>
        <item>Biology</item>
        <item>Man Society Right</item>
    </string-array>
    <string-array name="Cities">
        <item>Астана</item>
        <item>Актау</item>
        <item>Актобе</item>
        <item>Аркалык</item>
        <item>Атырау</item>
        <item>Усть-Каменогорск</item>
        <item>Жезказган</item>
        <item>Талдыкорган</item>
        <item>Уральск</item>
        <item>Алматы</item>
        <item>Караганда</item>
        <item>Кызылорда</item>
        <item>Кокшетау</item>
        <item>Костанай</item>
        <item>Туркестан</item>
        <item>Павлодар</item>
        <item>Рудный</item>
        <item>Петропавловск</item>
        <item>Семей</item>
        <item>Тараз</item>
        <item>Шымкент</item>
        <item>Астана</item>
        <item>Жетысай</item>
        <item>Екибастуз</item>
        <item>Каскелен Алматы</item>


    </string-array>

    <string-array name="Cities_KZ">
        <item>Астана</item>
        <item>Ақтау</item>
        <item>Актобе</item>
        <item>Арқалық</item>
        <item>Атырау</item>
        <item>Усть-Каменогорск</item>
        <item>Жезқазған</item>
        <item>Талдықорған</item>
        <item>Орал</item>
        <item>Алматы</item>
        <item>Қарағанды</item>
        <item>Қызылорда</item>
        <item>Көкшетау</item>
        <item>Костанай</item>
        <item>Туркестан</item>
        <item>Павлодар</item>
        <item>Рудный</item>
        <item>Петропавловск</item>
        <item>Семей</item>
        <item>Тараз</item>
        <item>Шымкент</item>
        <item>Жетысай</item>
        <item>Екибастуз</item>
        <item>Каскелен Алматы</item>

    </string-array>

    <string-array name="Cities_ENG">
        <item>Astana</item>
        <item>Aktau</item>
        <item>Aktobe</item>
        <item>Arkalyk</item>
        <item>Atyrau</item>
        <item>Ust-Kamenogorsk</item>
        <item>Zhezkazgan</item>
        <item>Taldykorgan</item>
        <item>Uralsk</item>
        <item>Almaty</item>
        <item>From Karaganda</item>
        <item>Kyzylorda</item>
        <item>Kokshetau</item>
        <item>Kostanai</item>
        <item>Turkestan</item>
        <item>Pavlodar</item>
        <item>Rudnyi</item>
        <item>Petropavlovsk</item>
        <item>Semey</item>
        <item>Taraz</item>
        <item>Shymkent</item>
        <item>Let\'s go</item>
        <item>Eqibastuz</item>
        <item>Kaskelen Almaty</item>

    </string-array>
    <string-array name="Questions">
        <item>Строить свою карьеру в пределах конкретной научной или технической сферы.</item>
        <item>Осуществлять наблюдение и контроль над людьми, влиять на них на всех уровнях.</item>
        <item>Иметь возможность делать все по-своему и не быть стесненным правилами какой-либо организации.</item>
        <item>Иметь постоянное место работы с гарантированным окладом и социальной защищенностью.</item>
        <item>Употреблять свое умение общаться на пользу людям, помогать другим.</item>
        <item>Работать над проблемами, которые представляются почти неразрешимыми.</item>
        <item>Вести такой образ жизни, чтобы интересы семьи и карьеры взаимно уравновешивали друг друга.</item>
        <item>Создать и построить нечто, что будет всецело моим произведением или идеей.</item>
        <item>Продолжать работу по своей специальности, чем получить более высокую должность, не связанную с моей специальностью.</item>
        <item>Быть первым руководителем в организации.</item>
        <item>Иметь работу, не связанную с режимом или другими организационными ограничениями.</item>
        <item>Работать в организации, которая обеспечит мне стабильность на длительный период времени.</item>
        <item>Употребить свои умения и способности на то, чтобы сделать мир лучше.</item>
        <item>Соревноваться с другими и побеждать.</item>
        <item>Строить карьеру, которая позволит мне не изменять своему образу жизни.</item>
        <item>Создать новое коммерческое предприятие.</item>
        <item>Посвятить всю жизнь избранной профессии.</item>
        <item>Занять высокую руководящую должность.</item>
        <item>Иметь работу, которая представляет максимум свободы и автономии в выборе характера занятий, времени выполнения и т.д.</item>
        <item>Оставаться на одном месте жительства, чем переехать в связи с повышением.</item>
        <item>Иметь возможность использовать свои умения и таланты для служения важной цели.</item>
        <item>Единственная действительная цель моей карьеры – находить и решать трудные проблемы, независимо от того, в какой области они возникли .</item>
        <item>Я всегда стремлюсь уделять одинаковое внимание моей семье и моей карьере.</item>
        <item>Я всегда нахожусь в поиске идей, которые дадут мне возможность начать и построить свое собственное дело.</item>
        <item>Я соглашусь на руководящую должность только в том случае, если она находится в сфере моей профессиональной компетенции.</item>
        <item>Я хотел бы достичь такого положения в организации, которое давало бы возможность наблюдать за работой других и интегрировать их деятельность.</item>
        <item>В моей профессиональной деятельности я более всего заботился о своей свободе и автономии.</item>
        <item>Для меня важнее остаться на нынешнем месте жительства, чем получить повышение или новую работу в другой деятельности.</item>
        <item>Я всегда искал работу, на которой мог бы приносить пользу другим.</item>
        <item>Соревнование и выигрыш – это наиболее важные и волнующие стороны моей карьеры.</item>
        <item>Карьера имеет смысл только в том случае, если она позволяет вести жизнь, которая мне нравится.</item>
        <item>Предпринимательская деятельность составляет центральную часть моей карьеры.</item>
        <item>Я бы скорее ушел из организации, чем стал заниматься работой, не связанной с моей профессией.</item>
        <item>Я буду считать, что достиг успеха в карьере только тогда, когда стану руководителем высокого уровня в солидной организации.</item>
        <item>Я не хочу, чтобы меня стесняла какая-нибудь организация или мир бизнеса.</item>
        <item>Я бы предпочел работать в организации, которая обеспечивает длительный контракт.</item>
        <item>Я бы хотел посвятить свою карьеру достижению важной и полезной цели.</item>
        <item>Я чувствую себя преуспевающим только тогда, когда я постоянно вовлечен в решение трудных проблем или в ситуацию соревнования.</item>
        <item>Выбрать и поддерживать определенный образ жизни важнее, чем добиваться успеха в карьере.</item>
        <item>Я всегда хотел основать и построить свой собственный бизнес.</item>
        <item>Я предпочитаю работу, которая не связана с командировками.</item>
    </string-array>

    <string-array name="Questions_KZ">

    </string-array>

    <string-array name="Questions_ENG">

    </string-array>
</resources>
