<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/universities">

    <fragment
        android:id="@+id/universities"
        android:name="com.example.unifind.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/login_page" />

    <fragment
        android:id="@+id/uni_picker"
        android:name="com.example.unifind.ui.view.UniversitiesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/universities_page" />

    <fragment
        android:id="@+id/user_page"
        android:name="com.example.unifind.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>