<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rectangle" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.7dp"
        android:layout_below="@id/universities_image"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rectangle" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/universities_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/university_icon" />

    <TextView
        android:id="@+id/university_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/universities_image"
        android:alpha="0.65"
        android:fontFamily="@font/helvetica"
        android:text="@string/sdu"
        android:textColor="#000000"
        android:textSize="9sp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/university_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/university_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/universities_image"
        android:text="@string/code"
        android:fontFamily="@font/helvetica"
        android:textColor="#6C6B6B"
        android:textSize="7sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/university_code_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/university_name"
        android:fontFamily="@font/helvetica"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/university_code"
        android:text="@string/_302"
        android:textColor="#6C6B6B"
        android:textSize="7sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/university_sub_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/university_code"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/universities_image"
        android:text="@string/sub_info"
        android:textColor="#6C6B6B"
        android:textSize="6sp"
        android:fontFamily="@font/helvetica"
        tools:ignore="SmallSp" />

</RelativeLayout>