<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/card_view"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:text="@string/Universities"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:text="@string/Specialisation"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/rv" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_weight="25"
            android:src="@mipmap/user_icon_round" />

        <TextView
            android:layout_weight="75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/helvetica"
            android:text="@string/rabiya_iolji"
            android:paddingStart="20dp"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>